--- a/style.css
+++ b/style.css
@@ -247,7 +247,9 @@ header {
 .feature {
     display: flex;
     width: calc(100% / 3);
-    height: 160px;
+    height: 100%;
+    max-height: 160px;
+    margin-bottom: 38px;
 }
 
 .features__img {
@@ -288,7 +290,91 @@ header {
 
 .feature__content--para {
     text-align: left;
-    line-height: 2;
+    line-height: 1.75;
     font-size: 16px;
     color: gray;
 }
+
+/* QUALITY WORK */
+
+.container__quality {
+    padding: 48px;
+}
+
+.row__quality {
+    display: flex;
+    align-items: center;
+}
+
+.quality__description--wrapper {
+    width: 50%;
+    padding-right: 24px;
+}
+
+.quality__img--wrapper {
+    width: 50%;
+}
+
+.quality__img {
+    width: 100%;
+}
+
+.quality__description--button {
+    margin: 32px 0;
+}
+
+/* STEPS */
+
+.row__quality {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.steps__description--wrapper {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 56px;
+}
+
+.steps__img--wrapper {
+    width: 50%;
+}
+
+.steps__img {
+    width: 100%;
+}
+
+.step {
+    display: flex;
+    width: 100%;
+    max-width: 360px;
+}
+
+.step__number {
+    width: 10%;
+    margin-right: 24px;
+    font-size: 32px;
+    color: rgba(160, 160, 160,0.6);
+    font-weight: 600;
+}
+
+.step__content {
+    width: 90%;
+}
+
+.step__content--title {
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+.step__content--para {
+    line-height: 1.5;
+    color: gray;
+    margin-bottom: 24px;
+}
+
+
+
+
